--- a/package.json
+++ b/package.json
@@ -4,39 +4,49 @@
   "description": "CollaborativeFeeds is a socket solution to collaborate around RSS feeds",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andsju/CollaborativeFeeds"
+    "url": "git+https://github.com/andsju/CollaborativeFeeds.git"
   },
   "author": "andsju",
   "homepage": "https://github.com/andsju/CollaborativeFeeds#readme",
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "connect-redis": "^3.0.2",
-    "csurf": "^1.8.3",
-    "ejs": "^2.4.1",
-    "express": "^4.13.4",
+    "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.1",
+    "connect-redis": "^3.4.2",
+    "csurf": "^1.11.0",
+    "ejs": "^2.7.4",
+    "express": "^4.17.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.13.0",
+    "express-session": "^1.17.0",
     "feedparser": "^1.1.4",
     "https": "^1.0.0",
     "iconv-lite": "^0.4.19",
-    "mysql": "^2.10.2",
+    "mysql": "^2.18.1",
     "mysql-promise": "^3.0.0",
-    "node-schedule": "^1.1.0",
+    "node-schedule": "^1.3.2",
     "password-hash": "^1.2.2",
     "path": "^0.12.7",
     "promise-mysql": "^1.3.2",
     "q": "^1.4.1",
-    "request": "^2.69.0",
+    "request": "^2.88.2",
     "rss-parser": "^2.10.6",
-    "socket.io": "^1.4.6",
-    "striptags": "^2.1.1"
+    "socket.io": "^2.3.0",
+    "striptags": "^2.1.1",
+    "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.5.3"
-  }
+    "mocha": "^7.0.1"
+  },
+  "bugs": {
+    "url": "https://github.com/andsju/CollaborativeFeeds/issues"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "license": "ISC"
 }
